[package]
name = "spotify_playlist_maker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spotify_playlist_maker"
path = "src/main.rs"

[dependencies]
rspotify = { version = "0.12.0", features = ["client-reqwest", "env-file"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tiny_http = "0.12.0"
